manifest-yaml/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cms-ingress # Ingress 리소스의 이름 ( 클러스터 내 중복 불가)
  namespace: dev-cms
  labels:
    app.kubernetes.io/name: cms-ingress
  annotations:
   # --- [공통] ALB 그룹 설정 ---
    alb.ingress.kubernetes.io/group.name: "main-dev-cms-alb" #그룹으로 추가.
    alb.ingress.kubernetes.io/group.order: "1" # 내가 메인이다
    # --- [공통] ALB 내부설정 설정 ---
    alb.ingress.kubernetes.io/scheme: internet-facing # ALB를 퍼블릭으로 생성 (internet-facing), 내부용은 "internal"
    alb.ingress.kubernetes.io/target-type: ip # 타겟을 파드의 IP로 지정 (타겟 타입: ip 또는 instance)
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]' # HTTP(80)와 HTTPS(443) 트래픽을 받기 위한 포트 설정
    alb.ingress.kubernetes.io/ssl-redirect: '443' # HTTP 요청이 오면 자동으로 HTTPS(443)로 리다이렉션
    # --- [개별] ALB 개별 설정 ---
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:*********1891:certificate/e885ba********fb8 # ACM 인증서 연결 (ACM에서 발급받은 ARN 넣기)
    alb.ingress.kubernetes.io/healthcheck-path: "/command/checkHealth"
spec:
  ingressClassName: alb # ALB Ingress Controller가 처리해야 함을 명시 (IngressClass 리소스 이름)
  rules:  #  라우팅 정의
  - host: dev-cm*.ne****.co.kr
    http:
      paths:
      - pathType: Prefix  # 접두어 기반 매칭 (예: /api, /admin도 포함)
        path: "/" # 모든 경로
        backend:
          service:
            name: cms-service # 라우팅 대상 Service 오브젝트 메타데이터 이름
            port: 
              number: 80          # 서비스가 노출하는 포트
